Added forgot password

--- a/MRTracking/MRTracking/appsettings.json
+++ b/MRTracking/MRTracking/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "AppSettings": {
+    "FrontendUrl": "http://localhost:4200"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=MedicalRepresentativeDb;Username=postgres;Password=123;"
   },
@@ -13,5 +16,14 @@
     "Key": "Y2F1bW9yc2lhc2NjbXZoYW56cXBlZXJ3bG5rd2RzZHRwbHhtZ3M=",
     "Issuer": "http://localhost:5025",
     "Audience": "http://localhost:5025"
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "Port": "587",
+    "SenderEmail": "your-email@gmail.com",
+    "SenderName": "MR Tracking System",
+    "Username": "your-email@gmail.com",
+    "Password": "your-app-password",
+    "EnableSSL": "true"
   }
 }
